--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Gabriel Ejenobo",
   "license": "MIT",
   "devDependencies": {
-    "concurrency": "^0.1.4",
+    "concurrently": "^7.5.0",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.32.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
